--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -146,9 +146,11 @@ font-weight: 400;
     .about {
         position: relative;
         padding: 0 166px;
-        background-image: url(/img/1440_about_bg-1.jpg);
-        background-repeat: no-repeat;
-        background-position: left 102px;
+        background-image: 
+        url(/img/1440_about_leaf-l.png),
+        url(/img/1440_about_bg-1.jpg);
+        background-repeat: no-repeat, no-repeat;
+        background-position: 10.5% 91px, left 102px;
         padding-top: 210px;
         padding-bottom: 0px;
         .btn {
@@ -166,6 +168,11 @@ font-weight: 400;
             margin-left: 17px;
             letter-spacing: 5px;
             margin-bottom: 93px;
+            &:before {
+                height: 39px;
+                top: -139px;
+                left: calc(50% - 1px);
+            }
         }
         .socials--side {
             top: calc(69% + 8px);
