--- a/src/styles/prices.scss
+++ b/src/styles/prices.scss
@@ -128,6 +128,11 @@ font-weight: 400;
         position: relative;
         padding: 0 166px;
         padding-top: 235px;
+        background-image: 
+        url(/img/1440_prices_leaf-l.png),
+        url(/img/1440_prices_leaf-r.png);
+        background-repeat:no-repeat,  no-repeat;
+        background-position: 10.6% 231px, 63.2% 68px;
         .paginations {
             align-items: flex-end;
             top: calc(45% - 8px);
@@ -138,7 +143,8 @@ font-weight: 400;
         }
         .section__title {
             margin-bottom: 0;
-            letter-spacing: 5.2px;
+            margin-left: 1px;
+            letter-spacing: 5px;
         }
     }
     .prices__photos {
