--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,12 @@
    margin: 0 auto;
    position: relative;
 }
+body {
+   margin: 0;
+   padding: 0;
+}
 
-@import "norm.css";
+@import "norm.scss";
 @import "main-page.scss";
 @import "portfolio.scss";
 @import "download-page.scss";
